[package]
name = "my_cryptocurrency"
version = "0.1.0"
description = "Created with Seahorse"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_cryptocurrency"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
